force-app/main/default/objects/OM_SAC_informedevisita__c/OM_SAC_informedevisita__c.object-meta.xml
<CustomObject>
    <label>Informe de visita</label>
    <nameField>
        <displayFormat>IV-{0000}</displayFormat>
        <label>Referencia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Informes de visita</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>