force-app/main/default/objects/OM_SAC_informedevisita__c/fields/Objetivo_visita__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_visita__c</fullName>
    <label>Objetivo visita</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asistencia técnica</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>