force-app/main/default/objects/OM_SAC_informedevisita__c/fields/OM_SAC_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_aprobacion__c</fullName>
    <description>Persona que valida el documento.</description>
    <label>Aprobación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>