force-app/main/default/objects/OM_SAC_informedevisita__c/fields/OM_SAC_Aprobado_Por__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Aprobado_Por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprobación</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Informes_de_visita1</relationshipName>
    <type>Lookup</type>
</CustomField>