force-app/main/default/objects/OM_SAC_informedevisita__c/fields/OM_SAC_Cliente__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cliente al que se debe visitar por la insatisfacción generada</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Informes de visita</relationshipLabel>
    <relationshipName>Informes_de_visita</relationshipName>
    <type>Lookup</type>
</CustomField>