force-app/main/default/objects/OM_SAC_informedevisita__c/fields/OM_SAC_Desarrollo__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Desarrollo__c</fullName>
    <label>Desarrollo</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>