force-app/main/default/objects/OM_SAC_informedevisita__c/fields/OM_SAC_elaboracion__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_elaboracion__c</fullName>
    <description>Persona que elabora el documento.</description>
    <label>Elaboración</label>
    <length>100</length>
    <type>Text</type>
</CustomField>