force-app/main/default/objects/OM_SAC_informedevisita__c/fields/OM_SAC_Elaborado_por__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Elaborado_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Elaboración</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Informes_de_visita</relationshipName>
    <type>Lookup</type>
</CustomField>