force-app/main/default/objects/OM_SAC_informedevisita__c/fields/OM_SAC_fechadevisita__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_fechadevisita__c</fullName>
    <label>Fecha de visita</label>
    <type>Date</type>
</CustomField>