force-app/main/default/objects/OM_SAC_informedevisita__c/fields/OM_SAC_lugardevisita__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_lugardevisita__c</fullName>
    <label>Lugar de visita</label>
    <length>100</length>
    <type>Text</type>
</CustomField>