force-app/main/default/objects/OM_SAC_informedevisita__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Informes de visita</relationshipLabel>
    <relationshipName>Informes_de_visita</relationshipName>
    <type>Lookup</type>
</CustomField>