force-app/main/default/objects/OM_SAC_informedevisita__c/fields/Vidrala__c.field-meta.xml
<CustomField>
    <fullName>Vidrala__c</fullName>
    <description>Persona/s de Vidrala que realiza/n la visita.</description>
    <label>Vidrala</label>
    <length>100</length>
    <type>Text</type>
</CustomField>